--- a/src/App.less
+++ b/src/App.less
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  background-color: 'red';
 }
 
 .App-logo {
@@ -36,3 +36,4 @@
     transform: rotate(360deg);
   }
 }
+@import '~antd/dist/antd.less';
